feat(main-server): update register and added cors policy
