# main-server/pkg/handler/handler.go
@@ -3,9 +3,12 @@ package handler
 import (
 	"main-server/pkg/service"
 
+	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 
 	_ "main-server/docs"
+
+	route "main-server/pkg/constants/route"
 
 	_ "github.com/swaggo/files"
 	swaggerFiles "github.com/swaggo/files"
@@ -21,21 +24,36 @@ func NewHandler(services *service.Service) *Handler {
 	return &Handler{services: services}
 }
 
-// Инициализация маршрутов
+/* Инициализация маршрутов */
 func (h *Handler) InitRoutes() *gin.Engine {
 	router := gin.New()
 
+	router.LoadHTMLGlob("pkg/templates/*")
+
+	// Настройка CORS-политики
+	router.Use(cors.New(cors.Config{
+		AllowAllOrigins: true, // для тестов
+		// AllowOrigins:     []string{"http://localhost:3000"},
+		AllowMethods:     []string{"POST", "GET"},
+		AllowHeaders:     []string{"Origin", "Content-type"},
+		AllowCredentials: true,
+	}))
+
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
-	auth := router.Group("/auth")
+	auth := router.Group(route.AUTH_MAIN_ROUTE)
 	{
-		auth.POST("/sign-up", h.signUp)
-		auth.POST("/sign-in", h.signIn)
-		auth.POST("/refresh", h.refresh)
-		auth.POST("/logout", h.logout)
+		auth.POST(route.AUTH_SIGN_UP_ROUTE, h.signUp)
+		auth.POST(route.AUTH_SIGN_IN_ROUTE, h.signIn)
+		auth.POST(route.AUTH_SIGN_IN_GOOGLE_ROUTE, h.signInOAuth2)
+		auth.GET(route.AUTH_ACTIVATE_ROUTE, h.activate)
+
+		// With middlewares (for get data from access token)
+		auth.POST(route.AUTH_REFRESH_TOKEN_ROUTE, h.userIdentityLogout, h.refresh)
+		auth.POST(route.AUTH_LOGOUT_ROUTE, h.userIdentity, h.logout)
 	}
 
-	api := router.Group("/api", h.userIdentity)
+	/*api := router.Group("/api", h.userIdentity)
 	{
 		lists := api.Group("/lists")
 		{
@@ -54,7 +72,7 @@ func (h *Handler) InitRoutes() *gin.Engine {
 				items.DELETE("/:item_id", h.deleteItem)
 			}
 		}
-	}
+	}*/
 
 	return router
 }
